# jms-mcp

./: .gitignore  README.md
.github/workflows/: ci.yml
JMS-MCP/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
JMS-MCP/docs/: api-reference.md  batch-examples.md  security.md  setup.md  troubleshooting.md  usage-examples.md
JMS-MCP/jumpserver_mcp_server/: __main__.py  approval.py  audit.py  batch.py  command_execution.py  config.py  data_handling.py  errors.py  host_discovery.py  ops_executor.py  readonly_tools.py  security_policy.py  server.py  sessions.py  setup.py  tools.py  user_connection.py
JMS-MCP/tests/: test_audit_approval.py  test_batch.py  test_command_execution.py  test_data_handling.py  test_host_discovery.py  test_performance.py  test_readonly_log_tool.py  test_security_policy.py  test_sessions_integration.py  test_transport_auth.py
openspec/changes/archive/2026-06-29-jumpserver-mcp/: design.md  existing-code-alignment.md  proposal.md  spike-0.1-findings.md  tasks.md
openspec/changes/archive/2026-06-29-jumpserver-mcp/specs/data-handling/: spec.md
openspec/changes/switch-to-streamable-http/: README.md  design.md  proposal.md  tasks.md
openspec/changes/switch-to-streamable-http/specs/mcp-transport/: spec.md
openspec/specs/batch-operations/: spec.md
openspec/specs/command-execution/: spec.md
openspec/specs/data-handling/: spec.md
openspec/specs/host-discovery/: spec.md
openspec/specs/security-controls/: spec.md
openspec/specs/session-management/: spec.md
openspec/specs/user-connection/: spec.md
(+6 files in other folders)
